# divain-prueba

./: .env  Makefile  README.md  compose.yaml
api/: pyproject.toml
api/app/: .env  .env.test  config.py  main.py
api/app/db/: main.py  models.py  populate_db.py  setup.py
api/app/middlewares/: main.py
api/app/repositories/: product.py  stock_movement.py
api/app/routes/: product.py  stock.py  typings.py
api/app/services/: product.py  stock_movement.py
api/app/tests/: conftest.py  test_api.py
docker/api/: Dockerfile
docker/db/init/: create-test-db.sql
docker/frontend/: Dockerfile
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  App.tsx  constants.ts  main.tsx  types.ts
frontend/src/components/: Header.tsx  Loading.tsx  Product.tsx  StockMovementItem.tsx  StockMovementList.tsx
frontend/src/hooks/: useGetProducts.ts  useGetStockMovements.ts
frontend/src/pages/: Home.tsx  Stock.tsx
